--- a/0_tools/0_tools.Rmd
+++ b/0_tools/0_tools.Rmd
@@ -542,6 +542,8 @@ R for Data Science (https://r4ds.had.co.nz)
 
 Advanced R (https://adv-r.hadley.nz)
 
+\newpage
+
 # ggplot2
 
 We will be using the `ggplot2` package for making graphics in this class.
@@ -574,28 +576,28 @@ Anscombe's Quartet is comprised of 4 datasets that have nearly identical simple 
 library(dplyr)
 library(tidyr)
 
-anscombe %>%
-  gather(variable, value) %>%
-  separate(variable, into = c("variable", "dataset"), sep = 1) %>%
-  group_by(variable, dataset) %>%
-  mutate(id = 1:n()) %>%
-  spread(variable, value) %>%
-  group_by(dataset) %>%
+anscombe |>
+  gather(variable, value) |>
+  separate(variable, into = c("variable", "dataset"), sep = 1) |>
+  group_by(variable, dataset) |>
+  mutate(id = 1:n()) |>
+  spread(variable, value) |>
+  group_by(dataset) |>
   summarise(mean_x = mean(x), sd_x = sd(x),
             mean_y = mean(y), sd_y = sd(y),
-            cor = cor(x, y)) %>%
+            cor = cor(x, y)) |>
   knitr::kable()
 ```
 
 But this doesn't tell the whole story. Let's look closer at these datasets.
 
 ```{r, echo=FALSE}
-anscombe %>%
-  gather(variable, value) %>%
-  separate(variable, into = c("variable", "dataset"), sep = 1) %>%
-  group_by(variable, dataset) %>%
-  mutate(id = 1:n()) %>%
-  spread(variable, value) %>%
+anscombe |>
+  gather(variable, value) |>
+  separate(variable, into = c("variable", "dataset"), sep = 1) |>
+  group_by(variable, dataset) |>
+  mutate(id = 1:n()) |>
+  spread(variable, value) |>
   ggplot() +
   geom_point(aes(x, y)) +
   geom_smooth(aes(x, y), method = "lm", se = FALSE) +
@@ -702,8 +704,8 @@ ggplot(data = mpg) +
 So we can say, yes, cars with larger engines have worse fuel efficiency. But there is more going on here.
 
 ```{r echo = FALSE}
-mpg %>%
-  mutate(outlier = displ > 5 & hwy > 20) %>%
+mpg |>
+  mutate(outlier = displ > 5 & hwy > 20) |>
   ggplot() +
   geom_point(mapping = aes(displ, hwy, colour = outlier, size = outlier)) +
   scale_color_manual(values = c("black", "red")) +
@@ -823,6 +825,8 @@ Book website (http://had.co.nz/ggplot2/)
 
 Ch. 3 of R4DS (https://r4ds.had.co.nz/data-visualisation.html)
 
+\newpage
+
 # tidyverse
 
 The tidyverse is a suite of packages released by RStudio that work very well together ("verse") to make data analysis run smoothly ("tidy"). It's also a package in `R` that loads all the packages in the tidyverse at once.
@@ -863,7 +867,7 @@ The package `readr` provides a fast and friendly way to ready rectangular text d
 
 Here is an example csv file from fivethirtyeight.com on how to choose your college major (https://fivethirtyeight.com/features/the-economic-guide-to-picking-a-college-major/).
 
-```{r}
+```{r, message=FALSE}
 # load readr
 library(readr)
 
@@ -900,12 +904,12 @@ To facilitate easy transformation of data, we're going to learn how to use the `
 
 We will do this with the `recent_grads` data from fivethiryeight.com we just read into `R` using `readr`.
 
-### `%>%`
+### `|>`
 
-Before we get into the verbs in `dplyr`, I want to introduce a new paradigm. All of the functions in the tidyverse are structured such that the first argument is a data frame and they also return a data frame. This allows for efficient use of the pipe operator `%>%` (pronounce this as "then").
+Before we get into the verbs in `dplyr`, I want to introduce a new paradigm. All of the functions in the tidyverse are structured such that the first argument is a data frame and they also return a data frame. This allows for efficient use of the pipe operator `|>` (pronounce this as "then").
 
 ```{r, eval=FALSE}
-a %>% b()
+a |> b()
 ```
 
 Taked the result on the left and passes it to the first argument on the right. This is equivalent to
@@ -925,21 +929,21 @@ The first argument is the name of the data frame. The second and subsequent argu
 Let's subset the `recent_grad` data set to focus on Statistics majors.
 
 ```{r}
-recent_grads %>% filter(Major == "STATISTICS AND DECISION SCIENCE")
+recent_grads |> filter(Major == "STATISTICS AND DECISION SCIENCE")
 ```
 
 Alternatively, we could look at all Majors in the same category, "Computers & Mathematics", for comparison.
 
 ```{r}
-recent_grads %>% filter(Major_category == "Computers & Mathematics")
+recent_grads |> filter(Major_category == "Computers & Mathematics")
 ```
 
-Notice we are using `%>%` to pass the data frame to the first argument in `filter()` and we do not need to use `recent_grads$Colum Name` to subset our data.
+Notice we are using `|>` to pass the data frame to the first argument in `filter()` and we do not need to use `recent_grads$Colum Name` to subset our data.
 
 `dplyr` functions never modify their inputs, so if we need to save the result, we have to do it using `<-`.
 
 ```{r}
-math_grads <- recent_grads %>% filter(Major_category == "Computers & Mathematics")
+math_grads <- recent_grads |> filter(Major_category == "Computers & Mathematics")
 ```
 
 Everything we've already learned about logicals and comparisons comes in handy here, since the second argument of `filter()` is a comparitor expression telling `dplyr` what rows we care about.
@@ -949,7 +953,7 @@ Everything we've already learned about logicals and comparisons comes in handy h
 `arrange()` works similarly to `filter()` except that it changes the order of rows rather than subsetting. Again, the first parameter is a data frame and the additional parameters are a set of column names to order by. 
 
 ```{r}
-math_grads %>% arrange(ShareWomen)
+math_grads |> arrange(ShareWomen)
 ```
 
 If we provide more than one column name, each additional column will be used to break ties in the values of preceding columns.
@@ -957,7 +961,7 @@ If we provide more than one column name, each additional column will be used to 
 We can use `desc()` to re-order by a column in descending order.
 
 ```{r}
-math_grads %>% arrange(desc(ShareWomen))
+math_grads |> arrange(desc(ShareWomen))
 ```
 
 ### `select()`
@@ -965,7 +969,7 @@ math_grads %>% arrange(desc(ShareWomen))
 Sometimes we have data sets with a ton of variables and often we want to narrow down the ones that we actually care about. `select()` allows us to do this based on the names of the variables.
 
 ```{r}
-math_grads %>% select(Major, ShareWomen, Total, Full_time, P75th)
+math_grads |> select(Major, ShareWomen, Total, Full_time, P75th)
 ```
 
 We can also use 
@@ -978,13 +982,13 @@ We can also use
 - `everything()` mathes all columns
 
 ```{r}
-math_grads %>% select(Major, College_jobs:Low_wage_jobs)
+math_grads |> select(Major, College_jobs:Low_wage_jobs)
 ```
 
 `rename()` is a function that will rename an existing column and select all columns.
 
 ```{r}
-math_grads %>% rename(Code_major = Major_code)
+math_grads |> rename(Code_major = Major_code)
 ```
 
 ### `mutate()`
@@ -992,11 +996,11 @@ math_grads %>% rename(Code_major = Major_code)
 Besides selecting sets of existing columns, we can also add new columns that are functions of existing columns with `mutate()`. `mutate()` always adds new columns at the end of the data frame.
 
 ```{r}
-math_grads %>% mutate(Full_time_rate = Full_time_year_round/Total)
+math_grads |> mutate(Full_time_rate = Full_time_year_round/Total)
 
 # we can't see everything
-math_grads %>% 
-  mutate(Full_time_rate = Full_time_year_round/Total) %>% 
+math_grads |> 
+  mutate(Full_time_rate = Full_time_year_round/Total) |> 
   select(Major, ShareWomen, Full_time_rate)
 ```
 
@@ -1005,13 +1009,13 @@ math_grads %>%
 The last major verb is summarise(). It collapses a data frame to a single row based on a summary function.
 
 ```{r}
-math_grads %>% summarise(mean_major_size = mean(Total))
+math_grads |> summarise(mean_major_size = mean(Total))
 ```
 
 A useful summary function is a count (`n()`), or a count of non-missing values (`sum(!is.na())`).
 
 ```{r}
-math_grads %>% summarise(mean_major_size = mean(Total), num_majors = n())
+math_grads |> summarise(mean_major_size = mean(Total), num_majors = n())
 ```
 
 ### `group_by()`
@@ -1019,9 +1023,9 @@ math_grads %>% summarise(mean_major_size = mean(Total), num_majors = n())
 `summarise()` is not super useful unless we pair it with `group_by()`. This changes the unit of analysis from the complete dataset to individual groups. Then, when we use the `dplyr` verbs on a grouped data frame they'll be automatically applied "by group".
 
 ```{r}
-recent_grads %>%
-  group_by(Major_category) %>%
-  summarise(mean_major_size = mean(Total, na.rm = TRUE)) %>%
+recent_grads |>
+  group_by(Major_category) |>
+  summarise(mean_major_size = mean(Total, na.rm = TRUE)) |>
   arrange(desc(mean_major_size))
 ```
 
@@ -1088,7 +1092,7 @@ Being tidy with our data is useful because it's a consistent set of rules to fol
 
 ```{r}
 # Compute rate per 10,000
-table1 %>% 
+table1 |> 
   mutate(rate = cases / population * 10000)
 
 # Visualize cases over time
@@ -1098,9 +1102,7 @@ ggplot(table1, aes(year, cases)) +
   geom_point(aes(colour = country))
 ```
 
-### **Development Version** Pivoting
-
-[**Note: this section discusses the development functions `pivot_wider()` and `pivot_longer()`. These functions are not yet available in the production version of `tidyr`. See section \@ref(spread-and-gather) for currently working code.**]{.red}
+### Pivoting
 
 Unfortunately, most of the data you will find in the "wild" is not tidy. So, we need tools to help us tidy unruly data.
 
@@ -1120,7 +1122,7 @@ table4a
 We can fix this using `pivot_longer()`.
 
 ```{r, eval=FALSE}
-table4a %>%
+table4a |>
   pivot_longer(-country, names_to = "year", values_to = "cases")
 ```
 
@@ -1129,9 +1131,9 @@ Notice we specified with columns we wanted to consolidate by telling the functio
 We can do the same thing with `table4b` and then **join** the databases together by specifying unique identifying attributes.
 
 ```{r, eval=FALSE}
-table4a %>%
-  pivot_longer(-country, names_to = "year", values_to = "cases") %>%
-  left_join(table4b %>% pivot_longer(-country, names_to = "year", values_to = "population"))
+table4a |>
+  pivot_longer(-country, names_to = "year", values_to = "cases") |>
+  left_join(table4b |> pivot_longer(-country, names_to = "year", values_to = "population"))
 ```
 
 If, instead, variables don't have their own column, we can `pivot_wider()`.
@@ -1139,54 +1141,10 @@ If, instead, variables don't have their own column, we can `pivot_wider()`.
 ```{r, eval=FALSE}
 table2
 
-table2 %>%
+table2 |>
   pivot_wider(names_from = type, values_from = count)
 ```
 
-### Spread and Gather
-
-[**Note: this section discusses the soon-to-be-deprecated functions `spread()` and `gather()`. These functions will soon be replaced by `pivot_wider()` and `pivot_longer()`. See section \@ref(development-version-pivoting) for code when this happens.**]{.red}
-
-Unfortunately, most of the data you will find in the "wild" is not tidy. So, we need tools to help us tidy unruly data.
-
-The main tools in `tidyr` are the ideas of `spread()` and `gather()`. `gather()` "lengthens" our data, increasing the number of rows and decreasing the number of columns. `spread()` does the opposite, increasing the number of columns and decreasing the number of rows.
-
-These two functions resolve one of two common problems:
-
-1. One variable might be spread across multiple columns. (`gather()`)
-2. One observation might be scattered across multiple rows. (`spread()`)
-
-A common issue with data is when values are used as column names.
-
-```{r}
-table4a
-```
-
-We can fix this using `gather()`.
-
-```{r}
-table4a %>%
-  gather(-country, key = "year", value = "cases")
-```
-
-Notice we specified with columns we wanted to consolidate by telling the function the column we *didn't* want to change (`-country`). We can use the `dplyr::select()` syntax here for specifying the columns to pivot.
-
-We can do the same thing with `table4b` and then **join** the databases together by specifying unique identifying attributes.
-
-```{r}
-table4a %>%
-  gather(-country, key = "year", value = "cases") %>%
-  left_join(table4b %>% gather(-country, key = "year", value = "population"))
-```
-
-If, instead, variables don't have their own column, we can `spread()`.
-
-```{r}
-table2
-
-table2 %>%
-  spread(key = type, value = count)
-```
 
 ### Separating and Uniting
 
@@ -1199,7 +1157,7 @@ table3
 We need to split the `rate` column into the cases and population columns so that each value has its own cell. The function we will use is `separate()`. We need to specify the column, the value to split on ("/"), and the names of the new coumns.
 
 ```{r}
-table3 %>%
+table3 |>
   separate(rate, into = c("cases", "population"), sep = "/")
 ```
 
@@ -1226,6 +1184,8 @@ By default, `separate()` will split values wherever it sees a character that isn
 `dplyr` (https://dplyr.tidyverse.org)
 
 `tidyr` (https://tidyr.tidyverse.org)
+
+\newpage
 
 # Rmarkdown
 
@@ -1311,6 +1271,8 @@ There are many options that can affect the aesthetics of the resulting document 
 Documentation and cheat sheets (https://rmarkdown.rstudio.com)
 
 R Markdown: The Definitive Guide (https://bookdown.org/yihui/rmarkdown/)
+
+\newpage
 
 # Git and GitHub
 
