office hour location

--- a/00_admin/syllabus.Rmd
+++ b/00_admin/syllabus.Rmd
@@ -12,7 +12,7 @@ output:
 
 Dr. Andee Kaplan  
 Lectures: TR 9:30am - 10:45am Military Science Building 115  
-Office Hours: W 10am - 1pm Animal Science Building 31  
+Office Hours: W 10am - 1pm Statistics Building 006  
 andee.kaplan@colostate.edu
 
 
