--- a/0_tools/example.Rmd
+++ b/0_tools/example.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Example Document"
 author: "Andee Kaplan"
-date: "9/9/2021"
+date: "`r Sys.Date()`"
 output: pdf_document
 ---
 
@@ -15,26 +15,34 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars, echo=FALSE}
+```{r cars}
 summary(cars)
 ```
-
-```{r}
-
-```
-
-```{r}
-print("hello world")
-```
-
-
 
 ## Including Plots
 
 You can also embed plots, for example:
 
-```{r pressure, echo=FALSE, fig.cap="This is a prettyplot!"}
+```{r pressure, echo=FALSE}
 plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+```{r}
+library(ggplot2)
+```
+
+```{r, echo = FALSE, fig.cap="Two plots of random noise.", fig.show='hold', out.width="50%"}
+x <- rnorm(100)
+y <- runif(100)
+
+
+ggplot() +
+  geom_point(aes(x, y))
+
+ggplot() +
+  geom_histogram(aes(x))
+
+```
+
